--- a/edu0704/components.json
+++ b/edu0704/components.json
@@ -1,54 +1,22 @@
-<div id="blocklyDiv"></div>
-    <xml id="toolbox" style="display: none">
-      <category name="控制 Control" colour="#008c97">
-          <block type="blockly_pause"></block>
-          <block type="blockly_loop"></block>
-          <block type="blockly_controls_for"></block>
-          <block type="blockly_if"></block>
-          <block type="blockly_ifelse"></block>
-      </category>
-      <category name="运动 Movement" colour="#f5821f">
-          <block type="blockly_front"></block>
-          <block type="blockly_back"></block>
-          <block type="blockly_left"></block>
-          <block type="blockly_right"></block>
-          <block type="blockly_keepwalking_front"></block>
-          <block type="blockly_keepwalking_back"></block>
-          <block type="blockly_rotate"></block>
-          <block type="blockly_turnleft"></block>
-          <block type="blockly_turnright"></block>
-          <block type="blockly_differential"></block>
-          <block type="blockly_differential_control"></block>
-      </category>
-      <category name="灯光 Light Effect" colour="#fec002">
-          <block type="blockly_earcolor"></block>
-          <block type="blockly_eyeswitch"></block>
-          <block type="blockly_customizecolor"></block>
-          <block type="blockly_closelight"></block>
-      </category>
-      <category name="声音 Sound" colour="#d80381">
-          <block type="blockly_animal"></block>
-          <block type="blockly_speak"></block>
-          <block type="blockly_note"></block>
-          <block type="blockly_play"></block>
-          <block type="blockly_secret"></block>
-      </category>
-      <category name="数学 Math" colour="#01bee6">
-          <block type="blockly_math_plus"></block>
-          <block type="blockly_math_sub"></block>
-          <block type="blockly_math_mul"></block>
-          <block type="blockly_math_div"></block>
-          <block type="blockly_isoddevenprime"></block>
-          <block type="blockly_logic_or"></block>
-          <block type="blockly_logic_and"></block>
-          <block type="blockly_number"></block>
-      </category>
-      <category name="模式 Sensor" colour="#01c1b6">
-          <block type="blockly_tracking"></block>
-          <block type="blockly_obsessive"></block>
-          <block type="blockly_follow"></block>
-          <block type="blockly_trackingdir"></block>
-          <block type="blockly_btmsensor"></block>
-          <block type="blockly_eyesensor"></block>
-      </category>
-  </xml>
+{
+    "example": [
+        { "name": "寻找小伙伴111", "img": "./img/example1.png", "difficulty": 4, "knowledge": "111动作", "story": "1111今天周末，蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路，快来帮帮蛋仔吧蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路" },
+        { "name": "寻找小伙伴222", "img": "./img/example2.png", "difficulty": 1, "knowledge": "2222动作", "story": "22222今天周末，蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路，快来帮帮蛋仔吧" },
+        { "name": "寻找小伙伴333", "img": "./img/example3.png", "difficulty": 2, "knowledge": "333动作", "story": "33333今天周末，蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路，快来帮帮蛋仔吧" },
+        { "name": "寻找小伙伴444", "img": "./img/example4.png", "difficulty": 4, "knowledge": "444动作", "story": "4444今天周末，蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路，快来帮帮蛋仔吧" },
+        { "name": "寻找小伙伴555", "img": "./img/example5.png", "difficulty": 3, "knowledge": "555动作", "story": "55555今天周末，蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路，快来帮帮蛋仔吧" },
+        { "name": "寻找小伙伴666", "img": "./img/example6.png", "difficulty": 4, "knowledge": "666动作", "story": "66666今天周末，蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路，快来帮帮蛋仔吧" },
+        { "name": "寻找小伙伴777", "img": "./img/example7.png", "difficulty": 3, "knowledge": "777动作", "story": "77777今天周末，蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路，快来帮帮蛋仔吧" },
+        { "name": "寻找小伙伴888", "img": "./img/example8.png", "difficulty": 2, "knowledge": "888动作", "story": "8888今天周末，蛋仔要去找他的好朋友蛋蛋玩，到蛋蛋家需要走一条“L形“的道路，快来帮帮蛋仔吧" }
+    ],
+    "robot": [
+        { "name": "蛋仔1", "deviceId": "111111", "flag": true },
+        { "name": "蛋仔2", "deviceId": "222222", "flag": false },
+        { "name": "蛋仔3", "deviceId": "333333", "flag": false },
+        { "name": "蛋仔4", "deviceId": "444444", "flag": false },
+        { "name": "蛋仔5", "deviceId": "555555", "flag": true },
+        { "name": "蛋仔6", "deviceId": "666666", "flag": true },
+        { "name": "蛋仔7", "deviceId": "666666", "flag": false },
+        { "name": "蛋仔8", "deviceId": "666666", "flag": true }
+    ]
+}
